--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,43 @@
-div.title {
-    font-size: 32px;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+*, *::before, *::after {
+    box-sizing: border-box
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1rem;
+}
+
+.title {
+    font-size: 2rem;
     font-family: Arial, serif;
+    margin-top: 1rem;
 }
 
 textarea {
-    display: block;
+    resize: none;
+    padding: 6px;
+    border-radius: 4px;
+}
+
+#buttons {
+    display: flex;
+    column-gap: .5rem;
 }
 
 button {
-    margin-top: 4px;
     background-color: lightsalmon;
     border: none;
+    cursor: pointer;
+    font-size: 1rem;
     padding: 4px 8px;
+    border-radius: 4px;
 }
 
 button:hover {
